-implementado sistema de consumo da api

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -48,5 +48,6 @@
     <string name="error_conection">Connection Error</string>
     <string name="change">Change</string>
     <string name="change_summoner_name">Change Summoner Name</string>
+    <string name="with_rune">With the rune:</string>
 
 </resources>
